#1577 closed bug (fixed)
USB/EHCI transfers sometimes time out
Reported by: | axeld | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/USB/EHCI | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After Luzern, I updated my USB installation again, and since then I have serious problems with accessing USB mass storage devices. Some blocks/files whatever are listed in Tracker, but cannot be accessed, reading their data fails. It's even 100% reproducible with the same files. I have these problems with HDs as well as flash memory cards. Log file from a failed transfer is attached; the problem occurs at the end of the log.
Attachments (2)
Change History (14)
by , 17 years ago
comment:1 by , 17 years ago
Summary: | USB/EHCI transfers sometimes don't work → USB/EHCI transfers sometimes time out |
---|
comment:2 by , 17 years ago
comment:3 by , 17 years ago
Cc: | added |
---|
Which version of usb_scsi do you use? The one from bebits has some problem during converting READ_6/WRITE_6 to READ_10/WRITE_10. Patched version is here: http://zharik.host.sk/prahramy/usb_scsi-0.1.0-dev-9994.zip. Can you try it on your system?
comment:4 by , 17 years ago
Cc: | removed |
---|---|
Owner: | changed from | to
I thought I would be using the latest version from Haiku's repository that allowed to be used with BeOS. Anyway, with that new version, the problems are gone, thanks!
Does the version in the repository still suffer from this problem? If not, I would just close this bug.
comment:5 by , 17 years ago
Status: | new → assigned |
---|
Hm... it looks a bit suspect. Actual repository code already have this fix for 6-->10 conversion. Please left this bug opened until I check my working copy, that is targeted to cvs at sourceforge. It is possible that it still have some changes, that are not commited. The version, we have now in Haiku repository was transferred directly from my CVS at sis4be.sf.net.
comment:6 by , 17 years ago
It (or something very similar) just happened again, attached another log. It just doesn't seem to happen very often anymore, now.
by , 17 years ago
comment:7 by , 16 years ago
Milestone: | R1/alpha → R1 |
---|---|
Priority: | high → normal |
comment:8 by , 9 years ago
Component: | Drivers/USB → Drivers/USB/EHCI |
---|
Sorting out Drivers/USB/EHCI tickets from Drivers/USB.
comment:9 by , 9 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
comment:10 by , 6 years ago
hrev_51986 x86_64 tested. I transferred 1-2GB files from USB sticks to HD without 'failed transfers' on any files. No issue retrieving any files from any USB NTFS-formatted drives.
Don't perceive this as a major issue at this time. Please reverify.
comment:11 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
comment:12 by , 4 years ago
Milestone: | R1 → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Just tried with hrev21904, but the problem persists. It might happen only on certain disks (I didn't have that flash disk before, and only rarely used that HD).