* Made at least scsi_cmd_rw_10 the same as the one in private/drivers/scsi_cmds.h;   ideally, we would only have one file and no copies - later. * That also changed how READ/WRITE_6 commands are translated to READ/WRITE_10   commands, but it was obviously correct before, at least I can still reproduce   bug #1577 (so it has to be something else). * Spotted a few suspicious uses of transform_6_10() vs. transform_cmd_6_10();   at least the FreeBSD driver seem to work differently here, anyway (it always   uses 12 byte commands for most of these). * Cleaned up the file.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22838 a95241bf-73f2-0310-859d-f6bbb57e9c96